@@ -7,6 +7,8 @@ Revision history for Perl extension Puzzle.
 		debug information, you need to add "%frame_debug%" instead of
 		"%debug%"
 	- Add a sample folder with examples css and js for debug frame layout.
+	- Add module dump in debug module
+	- Now all frames had visibility of the title of the center page.
 
 0.02  Sat Jan 29 20:47:11 CET 2011
  	- first public distribution.
